[fix] 修正訂單完成頁z-index

--- a/assets/scss/custom/_cart-completed.scss
+++ b/assets/scss/custom/_cart-completed.scss
@@ -8,7 +8,7 @@
     min-height: calc(100vh - 42rem);
     padding-top: 8.2rem;
     padding-bottom: 10.6rem;
-    z-index: 1;
+    z-index: 99;
 
     @include media-breakpoint-down(medium) {
         padding-top: 8.8rem;
@@ -360,7 +360,7 @@
         padding-top: 12rem;
         padding-bottom: 12rem;
         overflow: scroll;
-        z-index: 999;
+        z-index: 1000;
         opacity: 0;
         transform: translateY(4.8rem);
         transition: opacity .3s ease-in-out, transform .3s ease-in-out;
